--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClass = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://183.61.130.166:3306/web_lanyuan?useUnicode=true&characterEncoding=UTF-8
-jdbc.username = lanyuan
-jdbc.password = lanyuan!
+jdbc.url = jdbc:mysql://10.1.88.109:3306/bidata?useUnicode=true&characterEncoding=UTF-8
+jdbc.username = luoxr
+jdbc.password = luoxr
 
 jdbc.minPoolSize=2
 jdbc.maxPoolSize=20
