--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClass = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://10.1.88.109:3306/bidata?useUnicode=true&characterEncoding=UTF-8
-jdbc.username = luoxr
-jdbc.password = luoxr
+jdbc.url = jdbc:mysql://125.94.213.20:3306/db_test?useUnicode=true&characterEncoding=UTF-8
+jdbc.username = cm_chat
+jdbc.password = cm_chat!
 
 jdbc.minPoolSize=2
 jdbc.maxPoolSize=20
