--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,12 @@
       <version>2.5.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.7.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
