--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -9,8 +9,8 @@ redis.pool.testOnBorrow=true
 #当调用return Object方法时，是否进行有效性检查
 redis.pool.testOnReturn=true
 #IP
-redis.ip=183.61.130.165
+redis.ip=xxxx
 #Port
-redis.port=6380
+redis.port=xxx
 #password
-redis.password=redis
+redis.password=xxx
